Issue 48123: IAE in PanoramaQCSettings.getRowIdFromName() (#748)